SFDCProject/src/objects/User_Group__c.object
<CustomObject>
    <description>User managed group for workflow task assignment.</description>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting/Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner/Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner/Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Payment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Team</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Branch</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a branch account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Workflow_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Active__c</fullName>
        <formula>User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Cannot select a Partner user</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notContain</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Workflow_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Group</label>
    <listViews>
        <fullName>Contract_Approval</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Contract Approval</value>
        </filters>
        <label>Contract Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Retail_Operations_Group</fullName>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Install_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Retail Operations</value>
        </filters>
        <label>Retail Operations Group</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>U{00000}</displayFormat>
        <label>User Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>